--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://static-00.iconduck.com/assets.00/task-complete-icon-1024x1024-eg3p1g4a.png" />
+    <link rel="icon" type="image/svg+xml" href="./public/todo-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Todos</title>
   </head>
